--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -1015,14 +1015,20 @@
         "X = df[cols]\n",
         "y = df['class']\n",
         "\n",
+        "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+        "# Use our pre-prepared data\n",
         "# Test and train set: Note that for the purposes of this demonstrationm we are using a deterministic function \n",
         "# to split the data into training and testing sets, making the results of this notebook the same every time it is run.\n",
         "# DO NOT USE THIS FUNCTION IN YOUR OWN WORK.\n",
         "# The sklearn train_test_split function randomly splits the training and test datasets and so can result in different outcomes.\n",
         "# Note that, all else equal, the more variation in the outcomes given the test/train split, the less reliable the modeling approach.\n",
         "# We leave the sklearn train_test_split commented here in case you wuold like to experiment with this feature.\n",
-        "X_train, X_test, y_train, y_test = CFACreditUseCaseUtils.train_test_split_deterministic(X, y, test_size=0.3, random_state=None) \n",
-        "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
+        "use_stochastic = False \n",
+        "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+        "if use_stochastic == False:\n",
+        "  X_train, X_test, y_train, y_test = CFACreditUseCaseUtils.train_test_split_deterministic(X, y, test_size=0.3, random_state=None) \n",
+        "else:\n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
         "\n",
         "#****************************\n",
         "# Keep record of protected for bias testing later\n",
@@ -1258,9 +1264,15 @@
         "from sklearn.utils import resample\n",
         "\n",
         "# Split first to avoid data-snooping\n",
+        "\n",
+        "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+        "# Use our pre-prepared data\n",
         "# See comments above regarding this deterministic split function.\n",
-        "X_train, X_test, y_train, y_test = CFACreditUseCaseUtils.train_test_split_deterministic(X, y, test_size=0.3, random_state=None) \n",
-        "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
+        "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+        "if use_stochastic == False:\n",
+        "  X_train, X_test, y_train, y_test = CFACreditUseCaseUtils.train_test_split_deterministic(X, y, test_size=0.3, random_state=None) \n",
+        "else:\n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
         "\n",
         "# Create up-sampled data set for minority class\n",
         "# note that n_samples = the number of samples the imbalance represents.\n",
@@ -1440,9 +1452,6 @@
       "source": [
         "from imblearn.over_sampling import SMOTE\n",
         "\n",
-        "#How many samples do we need to balance?\n",
-        "idx = np.random.choice(X_train.shape[0], size=X_train[y_train == 0].shape[0]-X_train[y_train == 1].shape[0], replace=False)\n",
-        "\n",
         "# Generate SMOTE samples and use this to train\n",
         "upsampler_smote = SMOTE()\n",
         "X_upsampled_smote, y_upsampled_smote = upsampler_smote.fit_resample(X=X_train, y=y_train)"
@@ -1487,7 +1496,6 @@
       "source": [
         "from matplotlib import pyplot as plt\n",
         "from mpl_toolkits.mplot3d import Axes3D\n",
-        "\n",
         "\n",
         "fig = plt.figure(figsize=(10, 7)) \n",
         "ax = fig.add_subplot(111, projection='3d')\n",
@@ -1663,9 +1671,15 @@
         "from imblearn.under_sampling import RandomUnderSampler \n",
         "\n",
         "#Split first to avoid data-snooping\n",
+        "\n",
+        "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+        "# Use our pre-prepared data\n",
         "# See comments above regarding this deterministic split function.\n",
-        "X_train, X_test, y_train, y_test = CFACreditUseCaseUtils.train_test_split_deterministic(X, y, test_size=0.3, random_state=None) \n",
-        "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
+        "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+        "if use_stochastic == False:\n",
+        "  X_train, X_test, y_train, y_test = CFACreditUseCaseUtils.train_test_split_deterministic(X, y, test_size=0.3, random_state=None) \n",
+        "else:\n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
         "\n",
         "#****************************\n",
         "# Keep record of protected for bias testing later\n",
@@ -1832,19 +1846,52 @@
       },
       "outputs": [],
       "source": [
-        "# Get cross-validation set, broken out from training data, to select the classifier\n",
-        "# Objective is to keep the classifier choice \"in sample\", so that running on the test data \n",
-        "# will be a true out-of-sample test. No data leakage bias.\n",
+        "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+        "# Use our pre-prepared files\n",
+        "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+        "if use_stochastic == False:\n",
+        "  # Preprepared data to demonstrate further functionality\n",
+        "  X_train_cv  = pd.read_csv('X_train_cv.csv')\n",
+        "  X_cv = pd.read_csv('X_cv.csv')\n",
+        "  y_train_cv = pd.read_csv('y_train_cv.csv')\n",
+        "  y_cv = pd.read_csv('y_cv.csv')\n",
+        "  X_train = pd.read_csv('X_train.csv')\n",
+        "  y_train = pd.read_csv('y_train.csv')\n",
+        "  X_test = pd.read_csv('X_test.csv')\n",
+        "  y_test = pd.read_csv('y_test.csv')\n",
+        "  X_train_protected = pd.read_csv('X_train_protected.csv')\n",
+        "  X_test_protected = pd.read_csv('X_test_protected.csv')\n",
         "\n",
-        "# Get pre created SMOTE file. This removes the stochastic element of SMOTE which would alter the results of this notebook on every run\n",
-        "# Experiment by altering the XXX paremetr in the auto_classifier_selection funtion, which will run SMOTE on each execution...\n",
-        "X_upsampled_smote = pd.read_csv('data/X_upsampled_smote.csv', index_col=0)\n",
-        "y_upsampled_smote = pd.read_csv('data/y_upsampled_smote.csv', index_col=0, dtype=int)\n",
+        "else:\n",
         "\n",
-        "# Cross validation as a subset of \n",
-        "# See comments above regarding this deterministic split function.\n",
-        "X_train_cv, X_cv, y_train_cv, y_cv = CFACreditUseCaseUtils.train_test_split_deterministic(X_upsampled_smote, y_upsampled_smote, test_size=0.3, random_state=None) \n",
-        "#X_train_cv, X_cv, y_train_cv, y_cv = train_test_split(X_train, y_train, test_size=0.3, random_state=None)\n"
+        "  # Summary: 1) Train/test split; 2) SMOTE upsampling of training data; 3) split cross-validation set from training data\n",
+        "  \n",
+        "  # 1) Split first to avoid data-snooping\n",
+        "  # See comments above regarding this deterministic split function.\n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
+        "\n",
+        "  #****************************\n",
+        "  # Keep record of protected for bias testing later\n",
+        "  X_train_protected = X_train[protected_cols]\n",
+        "  X_test_protected = X_test[protected_cols]\n",
+        "\n",
+        "  # Remember to remove protected columns before training\n",
+        "  X_train = X_train.drop(protected_cols, axis=1)\n",
+        "  X_test = X_test.drop(protected_cols, axis=1)\n",
+        "  #****************************\n",
+        "\n",
+        "  # 2) Split training sets into cv and train\n",
+        "  X_train_cv, X_cv, y_train_cv, y_cv = train_test_split(X_train, y_train, test_size=0.3, random_state=None)\n",
+        "\n",
+        "  # 3) Generate SMOTE samples for train and cv sets separately.\n",
+        "  # SMOTE the training data... overwrite\n",
+        "  upsampler_smote = SMOTE()\n",
+        "  X_train_cv, y_train_cv = upsampler_smote.fit_resample(X=X_train_cv, y=y_train_cv)\n",
+        "\n",
+        "  # SMOTE the CV data separately to avoid data snooping... overwrite\n",
+        "  upsampler_smote = SMOTE()\n",
+        "  X_cv, y_cv = upsampler_smote.fit_resample(X=X_cv, y=y_cv)\n",
+        "\n"
       ]
     },
     {
