--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -1016,14 +1016,16 @@
         "y = df['class']\n",
         "\n",
         "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
-        "# Use our pre-prepared data\n",
-        "# Test and train set: Note that for the purposes of this demonstrationm we are using a deterministic function \n",
-        "# to split the data into training and testing sets, making the results of this notebook the same every time it is run.\n",
-        "# DO NOT USE THIS FUNCTION IN YOUR OWN WORK.\n",
-        "# The sklearn train_test_split function randomly splits the training and test datasets and so can result in different outcomes.\n",
-        "# Note that, all else equal, the more variation in the outcomes given the test/train split, the less reliable the modeling approach.\n",
-        "# We leave the sklearn train_test_split commented here in case you wuold like to experiment with this feature.\n",
-        "use_stochastic = False \n",
+        "# Use our pre-prepared Test and train data\n",
+        "# Note that for the purposes of this demonstration we are using preprepared data and a deterministic function \n",
+        "# to split the data into training and testing sets, and generate synthetic data, making the results of this notebook the same every time it is run.\n",
+        "# This is to control the randomized outcomes of 1) The sklearn train_test_split function which randomly splits the training and test \n",
+        "# datasets and so can result in different outcomes each time it is run. 2) Later in this notebook we use SMOTE synthetic upsampling, which again, produces\n",
+        "# stochastic outcomes which change the results of the notebook.\n",
+        "# **DO NOT USE THIS APPROACH IN YOUR OWN WORK**\n",
+        "# Set the use_stochastic variable below to True to observe how introducing these randomized elements impacts the outcomes. \n",
+        "# Outcomes will vary if you do this and please note that our descriptive text will no longer be valid once you do this.\n",
+        "use_stochastic = False # << Change to True to observe stochastic outcomes.\n",
         "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
         "if use_stochastic == False:\n",
         "  X_train, X_test, y_train, y_test = CFACreditUseCaseUtils.train_test_split_deterministic(X, y, test_size=0.3, random_state=None) \n",
@@ -1843,12 +1845,12 @@
         "y_train_cv"
       ],
       "metadata": {
-        "id": "-yKvPRLa6f1A",
-        "outputId": "13ca5c59-23f0-4e60-ce23-ee5677e337e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "-yKvPRLa6f1A",
+        "outputId": "13ca5c59-23f0-4e60-ce23-ee5677e337e8"
       },
       "id": "-yKvPRLa6f1A",
       "execution_count": 26,
@@ -2063,7 +2065,8 @@
       "outputs": [],
       "source": [
         "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
-        "# Use our pre-prepared files\n",
+        "# Use our pre-prepared data\n",
+        "# See comments above regarding this deterministic split function\n",
         "# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
         "if use_stochastic == False:\n",
         "  # Preprepared data to demonstrate further functionality\n",
