--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -14,7 +14,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this code lab we will develop models to predict bad consumer credits for driving fair and interpretable lending decisions. We develop the models within the 5 stage Governance Framework, and explain how models can be validated, monitored and made to be fair.\n",
+        "In this code lab we will develop models to predict consumer credit defaults, which will be used to make fair and interpretable lending decisions. We develop the models within the 5 stage Governance Framework, and explain how models can be validated, monitored and made to be fair.\n",
         "\n",
         "The pace will be fast but feel free to experiment with the code to get a feel for the principles of best practice.\n",
         "\n",
