--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "35f08271",
       "metadata": {
         "id": "35f08271"
@@ -66,7 +66,7 @@
         "outputId": "889d8e21-3424-4e6c-c6b9-82a40502bc7d"
       },
       "id": "dTROkX0WobxD",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
         "outputId": "03ad54b9-01ef-4fe1-f007-afc2c9826c82"
       },
       "id": "uunH93sCCS1W",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "LusHe3a2BF_t",
       "metadata": {
         "id": "LusHe3a2BF_t"
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "c62115a2",
       "metadata": {
         "id": "c62115a2",
@@ -789,7 +789,7 @@
         "outputId": "0670256d-97d2-4905-b7f6-2e6a49648ec0"
       },
       "id": "KqlsoU-KVLvd",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,7 +844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "9d772e1c",
       "metadata": {
         "id": "9d772e1c",
@@ -927,7 +927,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "0n2YS32BDd6N",
       "metadata": {
         "id": "0n2YS32BDd6N"
@@ -986,7 +986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "eTjDqiD5f_j1",
       "metadata": {
         "id": "eTjDqiD5f_j1"
@@ -999,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "f9517124",
       "metadata": {
         "id": "f9517124"
@@ -1074,7 +1074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "af12e96b",
       "metadata": {
         "id": "af12e96b"
@@ -1112,7 +1112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "c09b7144",
       "metadata": {
         "id": "c09b7144",
@@ -1255,7 +1255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "739e0d7d",
       "metadata": {
         "id": "739e0d7d"
@@ -1312,7 +1312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "b8cb61d7",
       "metadata": {
         "id": "b8cb61d7",
@@ -1372,7 +1372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "5caebbb0",
       "metadata": {
         "id": "5caebbb0",
@@ -1444,7 +1444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "5dadf40d",
       "metadata": {
         "id": "5dadf40d"
@@ -1470,7 +1470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "4ff54d69",
       "metadata": {
         "id": "4ff54d69",
@@ -1530,7 +1530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "c031433f",
       "metadata": {
         "id": "c031433f",
@@ -1590,7 +1590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "750a6983",
       "metadata": {
         "id": "750a6983",
@@ -1662,7 +1662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "8dbc9854",
       "metadata": {
         "id": "8dbc9854"
@@ -1699,7 +1699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "c0beacf7",
       "metadata": {
         "id": "c0beacf7",
@@ -1749,7 +1749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "d6de0276",
       "metadata": {
         "id": "d6de0276",
@@ -1847,12 +1847,12 @@
         "id": "gj6TSczy6_WA"
       },
       "id": "gj6TSczy6_WA",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "tUbobdmKR9Or",
       "metadata": {
         "id": "tUbobdmKR9Or"
@@ -1920,7 +1920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "cyji4ydlQTVZ",
       "metadata": {
         "id": "cyji4ydlQTVZ",
@@ -2003,7 +2003,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "BuJjXTsYMbBs",
       "metadata": {
         "id": "BuJjXTsYMbBs",
@@ -2094,12 +2094,12 @@
         "id": "E9vMqJzer9cQ"
       },
       "id": "E9vMqJzer9cQ",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "af39a70d",
       "metadata": {
         "id": "af39a70d",
@@ -2177,7 +2177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "d379c310",
       "metadata": {
         "id": "d379c310",
@@ -2246,7 +2246,7 @@
         "outputId": "386ffd3c-9d08-41e5-c9c3-9a7cbeab08c9"
       },
       "id": "3siqlNSe68yi",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2263,9 +2263,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The chart above shows how our model performs in terms of recall and precision if we refuse credit at a range of default probabilities (i.e., thresholds). We test lending decision thresholds from a low of 30% probability of default to a high of 99% probability of default. You can see how the recall and the precision of the model changes overall (All), and for female and male groups for the various thresholds of default.\n",
+        "The chart above shows how our model performs in terms of recall and precision if we refuse credit at a range of default probabilities (i.e., thresholds). We test lending decision thresholds from a low of 30% probability of default to a high of 99% probability of default. You can see how the recall and the precision of the model changes overall (All), and for female and male groups for the various lending thresholds.\n",
         "\n",
-        "In this example, at the optimal_threshold, recall is maximized, and both recall and precision are between the fairness bounds, and therefore considered fair for the minority group (females)."
+        "In this example, at the optimal_threshold, recall is maximized, and precision for male and female groups is between the fairness bounds (we also constrain recall for males and females to within the fairness bounds in this optimization)."
       ],
       "metadata": {
         "id": "5J5M7xoa7a7_"
@@ -2286,7 +2286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "_xCoD7kw6r0b",
       "metadata": {
         "id": "_xCoD7kw6r0b",
@@ -2334,7 +2334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "fPlSWba2dSoo",
       "metadata": {
         "id": "fPlSWba2dSoo",
@@ -2392,7 +2392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "NfwlscWzExPQ",
       "metadata": {
         "id": "NfwlscWzExPQ",
@@ -2435,7 +2435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "r0GjSB9YxlEl",
       "metadata": {
         "id": "r0GjSB9YxlEl",
@@ -2488,7 +2488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "nqJGtpmu1nig",
       "metadata": {
         "id": "nqJGtpmu1nig",
@@ -2556,7 +2556,7 @@
         "outputId": "9757b48f-a84b-4c2d-f6ae-38bab29f06ca"
       },
       "id": "1huFH12USsKh",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2586,7 +2586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "4ZHyTdYTLCh8",
       "metadata": {
         "id": "4ZHyTdYTLCh8",
@@ -2655,7 +2655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "QREnQ1poSmRR",
       "metadata": {
         "id": "QREnQ1poSmRR",
@@ -2828,7 +2828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "_8v9zlaWTd3F",
       "metadata": {
         "id": "_8v9zlaWTd3F",
@@ -2904,7 +2904,7 @@
         "outputId": "7ff82391-3f8a-4d74-8170-eee15973794b"
       },
       "id": "2G7xB1Tk-Le4",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
