--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -1228,6 +1228,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#### Bias Alert: Prediction Bias\n",
+        "For given population, if model performance is significantly different when compared across different sub-groups, then the model is likely to be biased. We will address this as part of our Fairness testing later. "
+      ],
+      "metadata": {
+        "id": "t2xPDTGYguR8"
+      },
+      "id": "t2xPDTGYguR8"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Note the F1 score on the test data is 0.52 using an imbalanced training \n",
         "dataset. Now we can balance the dataset."
       ],
