--- a/M6_Credit.ipynb
+++ b/M6_Credit.ipynb
@@ -2744,7 +2744,7 @@
         "data_drift_features = GovernanceUtils.data_drift_psi(train_datadrift,test_datadrift,buckettype='bins',buckets=10,axis=1,single_variable=False)\n",
         "data_drift_target = data_drift_features[-1]\n",
         "\n",
-        "# Print out the target PSI value:\n",
+        "# Print out the CSI values for each feature and the overall target PSI value:\n",
         "print(\"Target PSI value is \",data_drift_target, \"\\n\" )\n"
       ]
     },
@@ -2754,11 +2754,11 @@
         "train_datadrift.columns"
       ],
       "metadata": {
-        "id": "VgNjZdgtwro5",
-        "outputId": "a95bde79-eac2-4f9f-b9a4-164e350a7d1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VgNjZdgtwro5",
+        "outputId": "a95bde79-eac2-4f9f-b9a4-164e350a7d1d"
       },
       "id": "VgNjZdgtwro5",
       "execution_count": 49,
